--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,50 @@
-div {
+#header,
+#nav,
+#content{
+  color: black;
+  text-decoration: none;
+  padding: 30px;
+}
+
+#header {
+  background: red;
+  height: 100px;
+}
+
+#nav {
+  background: cornflowerblue;
+  text-align: center;
+  padding: 40px 0px;
+  position: fixed;
+  width: 100%;
+  top: 160px;
+}
+
+#content{
+  
+  font-size: 30px;
+  text-align: center;
+  padding: 20px 20px;
+  height: 1000vh;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+  animation-delay: 0.5s;  
+}
+
+
+
+/* div {
   width: 500px;
   height: 500px;
   background: url("../image/logo.png");  
+} */
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
