--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,13 @@
+body {
+  font-size: 50px;
+}
+
 #header,
 #nav,
 #content{
   color: black;
   text-decoration: none;
-  padding: 30px;
+  padding: 30px;  
 }
 
 #header {
@@ -15,9 +19,9 @@
   background: cornflowerblue;
   text-align: center;
   padding: 40px 0px;
-  position: fixed;
-  width: 100%;
-  top: 160px;
+  position: sticky;
+  
+  top: 0;
 }
 
 #content{
@@ -26,7 +30,7 @@
   text-align: center;
   padding: 20px 20px;
   height: 1000vh;
-  opacity: 0;
+  
   animation: fadeIn 1s ease-in-out forwards;
   animation-delay: 0.5s;  
 }
