update css 가상클래스1

--- a/css_study/main.css
+++ b/css_study/main.css
@@ -5,7 +5,16 @@
   transition: 1s;
 }
 
-.box:hover{
+.box:focus {
   background-color: brown;
   width: 300px;
+}
+
+input {
+
+}
+
+input:focus {
+  background-color: orange;
+  
 }
