update css 가상선택

--- a/css_study/main.css
+++ b/css_study/main.css
@@ -18,3 +18,11 @@ input:focus {
   background-color: orange;
   
 }
+
+.box::after {
+  content: "hi";
+  display: block; 
+  width: 30px;
+  height: 30px;
+  background-color: royalblue;
+}
