--- a/css_study/css_property/main.css
+++ b/css_study/css_property/main.css
@@ -14,3 +14,16 @@ html {
   height: 50%;
   background-color: salmon;
 }
+
+a {
+  display: block;
+  width: 200px;
+  height: 100px;
+  background-color: orange;
+  font-size: 22px;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  line-height: 100px;
+
+}
