--- a/css_study/css_property/main.css
+++ b/css_study/css_property/main.css
@@ -1,4 +1,6 @@
-html {
+body {
+
+  height: 1000px;
   /* font-size: 18px; */
 }
 
@@ -28,11 +30,13 @@ a {
 
 }
 .test1 {
-  width: 200px;
+  /* width: 200px; */
   height: 200px;
   background-color: blue;
   background-image: url('https://heropy.blog/css/images/logo.png');
-  background-size: 50px;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
+
 }
