--- a/css/main.css
+++ b/css/main.css
@@ -12,16 +12,23 @@ body {
 
 #header {
   background: red;
+  width: 100%;
   height: 100px;
+  position: fixed;
+  z-index: 1;
+  text-align: center;
 }
 
 #nav {
   background: cornflowerblue;
   text-align: center;
   padding: 40px 0px;
-  position: sticky;
+  width: 100%;
+  height: 100px;
+  top: 160px;
+  position: absolute;  
   
-  top: 0;
+  
 }
 
 #content{
