--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -15,17 +15,21 @@ a {
   text-decoration: none;
 }
 
+.inner {
+  width: 1100px;  
+  margin: 0 auto;
+  position: relative;
+}
+
 /* HEADER */
 header {
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
 }
 
-header .inner {
-  width: 1100px;
+header > .inner {  
   height: 120px;
-  margin: 0 auto;  
-  position: relative;
+  
 }
 
 header .logo {
@@ -139,13 +143,59 @@ header .main-menu .item:hover .item__name {
 }
 
 header .main-menu .item .item__contents {
+width: 100%;
+position: fixed;
+left: 0;
+display: none;
+}
 
+header .main-menu .item:hover .item__contents {
+  display: block;
 }
 
 header .main-menu .item .item__contents .contents__menu {
-
+  background-color: #2c2a29;
+  height: auto;
 }
 
-header .main-menu .item .item__contents .contents__texture {
+header .main-menu .item .item__contents .contents__menu > ul{
+  display: flex;
+  padding: 20px 0;
+}
 
+header .main-menu .item .item__contents .contents__menu > ul > li {
+  width: 220px;
+}
+
+header .main-menu .item .item__contents .contents__menu > ul > li h4 {
+  padding:  3px 0 12px 0;
+  font-size: 14px;
+  color: #fff;
+}
+
+header .main-menu .item .item__contents .contents__menu >  ul > li ul li {
+  padding: 5px 0;
+  font-size: 12px;
+  color: #999;
+  cursor: pointer;
+}
+
+header .main-menu .item .item__contents .contents__menu >  ul > li ul li:hover {
+  color: #669900;
+}
+header .main-menu .item .item__contents .contents__texture {
+  padding: 26px 0;  
+  font-size: 12px;
+  background-image: url("../images/main_menu_pattern.jpg");
+}
+
+header .main-menu .item .item__contents .contents__texture h4 {
+  color: #999;
+  font-weight: 700;
+}
+
+header .main-menu .item .item__contents .contents__texture p {
+  color: #669900;
+  margin: 4px 0 14px;
+  font-size: 12px;
 }
