--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -443,6 +443,24 @@ header .badges .badge {
 
 }
 
+.notice .promotion {
+  height: 693px;
+  background-color: #f6f5ef;
+  position: relative;
+}
+.notice .promotion .swiper-container {
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+  background-color: orange;
+  text-align: center;
+  font-size: 200px;
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: calc((819px * 3 + 20px) / -2);
+/* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
+}
+
 
 
 
