--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -450,15 +450,29 @@ header .badges .badge {
 }
 .notice .promotion .swiper-container {
   width: calc(819px * 3 + 20px);
-  height: 553px;
-  background-color: orange;
-  text-align: center;
-  font-size: 200px;
+  height: 553px; 
   position: absolute;
   top: 40px;
   left: 50%;
   margin-left: calc((819px * 3 + 20px) / -2);
 /* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
+}
+
+.notice .promotion .swiper-slide {
+  opacity: .5;
+  transition: opacity 1s;
+}
+
+.notice .promotion .swiper-slide-active {
+  opacity : 1;
+}
+
+.notice .promotion .swiper-slide .btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto ;
 }
 
 
