--- a/css_study/css_property/main3.css
+++ b/css_study/css_property/main3.css
@@ -13,9 +13,8 @@
   height: 100px;
   border: 3px dashed red;
   background-color: orange;
-  text-align: center;
-  
-  
+  text-align: center; 
+  line-height: 100px;
   color: aliceblue;
   
 }
