--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -448,7 +448,13 @@ header .badges .badge {
   height: 693px;
   background-color: #f6f5ef;
   position: relative;
+  transition: height .4s;
+  overflow: hidden;
 }
+.notice .promotion.hide {
+  height: 0;
+}
+
 .notice .promotion .swiper-container {
   width: calc(819px * 3 + 20px);
   height: 553px; 
@@ -529,6 +535,50 @@ header .badges .badge {
   background-color: #333;
   color: #fff;
 } 
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+.rewards .inner {
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .btn-group {
+  position: absolute;
+  bottom: 24px;
+  right: 0;
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  flex-grow: 1;
+}
+
 
 
 
