--- a/starbucks/css/main.css
+++ b/starbucks/css/main.css
@@ -619,7 +619,7 @@ header .badges .badge {
 }
 .youtube .inner {
   height: 700px;
-  background-color: royalblue;
+  /* background-color: royalblue; */
 }
 .youtube .floating1 {
   position: absolute;
