--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,20 @@
-// & - 상위 선택자 참조
-.btn {
-  position: absolute;
-  &.active { // &가 상위선택자를 참조기능
-              // 상위 선택자가 하위 &로 치환
-    color: red;
-  }
-}
-.list {
-  li {
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-}
-
-.fs { // 엄청 편리한 상위선택자 참조
-  &-small { font-size: 12px; }
-  &-medium { font-size: 14px; }
-  &-large { font-size: 17px; }
+// 중첩된 속성
+// font: {}; margin: {}; .. 속성들을 편하게 작성할 수 있는 방법을 제공한다.
+.box {
+  font: {
+    weight: bold;
+    size: 10x;
+    family: sans-serif;
+  }; // font- '네임스페이스가 동일하다'의 의미
+  margin: {
+    top: 10px;
+    left: 20px;
+    right: 10px;
+  };
+  padding: {
+    top: 10px;
+    bottom: 40px;
+    left: 20px;
+    right: 30px;
+  };
 }
