--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,9 +10,29 @@ $map: ( // 객체 데이터
   r: royalblue,
   y: yellow,
 );
+@each $key, $value in $map { // map을 출력해보기
+  .box-#{$key} {
+    color: $value;
+  }
+}
 
-.box {
+@mixin left-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  @content; // 추가적인 내용 삽입을 가능하게하는 부분
+}
+.container {
   width: 100px;
-  color: red;
-  position: relative;
+  height: 100px;
+  @include left-top;
+}
+.box {
+  width: 200px;
+  height: 300px;
+  @include left-top{
+    bottom: 0;
+    right: 0;
+    margin: auto;
+  }
 }
