update bootstrap 성능최적화 방법

--- a/HTML/bootstrap-test/scss/main.scss
+++ b/HTML/bootstrap-test/scss/main.scss
@@ -2,8 +2,8 @@
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
-$secondary: yellowgreen;
 
+$secondary: yellowgreen;
 $theme-colors: (
   "primary":    $primary,
   "secondary":  $secondary,
@@ -15,4 +15,4 @@ $theme-colors: (
   "dark":       $dark
 );
 
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap";
