--- a/essential/bundler/webpack-test/scss/main.scss
+++ b/essential/bundler/webpack-test/scss/main.scss
@@ -2,6 +2,10 @@ $color--black: #000;
 $color--white: #fff;
 
 body {
-  color: $color--white;
   background-color: $color--black;
+  h1 {
+    color: $color--white;
+    font-size: 40px;
+    display: flex;
+  }
 }
