--- a/HTML/re/main.css
+++ b/HTML/re/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* COMMON*/
 body {
   background-color: #0a0a0a;
@@ -22,6 +23,23 @@ a {
   position: relative;
 }
 
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
 /* header */
 header {
   width: 100%;
@@ -33,6 +51,8 @@ header {
 
 header > .inner {
   height: 140px;
+  left: 50%;
+  margin-left: calc(1920px / -2);
 }
 
 header .logo {
@@ -208,14 +228,19 @@ header .main-menu .item:hover .item__name {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  left: 50%;
+  margin-left: calc(1920px / -2);
 }
 
 .youtube .floating {
-  position: absolute;
-  font-size: 50px;
+  font-size: 4em;
   font-weight: 500;
   color: #65FB65;
   text-align: center;
+}
+
+.youtube .floating span {
+  word-break: keep-all;
 }
 
 #player {
@@ -224,5 +249,163 @@ header .main-menu .item:hover .item__name {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.notice .notice-line {
+  position: relative;
+}
+
+.notice .notice-line .bg-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #333;
+}
+
+.notice .notice-line .bg-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
+}
+
+.notice .notice-line .inner {
+  height: 62px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.notice .notice-line .inner__left {
+  width: 60%;
+  height: 100%;
+  background-color: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.notice .project {
+  height: 693px;
+  position: relative;
+  -webkit-transition: height .4s;
+  transition: height .4s;
+  overflow: hidden;
+  margin-top: 100px;
+}
+
+.notice .project .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #65FB65;
+  font-size: 50px;
+}
+
+.notice .project .swiper-container {
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: calc((819px * 3 + 20px) / -2);
+  margin-top: 50px;
+  /* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
+}
+
+.notice .project .swiper-slide {
+  opacity: .5;
+  -webkit-transition: opacity 1s;
+  transition: opacity 1s;
+  overflow: hidden;
+}
+
+.notice .project .swiper-slide img {
+  max-width: auto;
+  border-radius: 10px;
+  height: 553px;
+}
+
+.notice .project .swiper-slide .btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.notice .project .swiper-slide-active {
+  opacity: 1;
+}
+
+.notice .project .swiper-pagination {
+  bottom: 40px;
+  left: 0;
+  right: 0;
+  /* 여기 부분만 지정을 해주면 된다. 이 이외에는 기본적으로 구성되어있음*/
+}
+
+.notice .project .swiper-pagination .swiper-pagination-bullet {
+  background-color: transparent;
+  background-image: url("./images/promotion_slide_pager.png");
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  outline: none;
+}
+
+.notice .project .swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0;
+}
+
+.notice .project .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url("./images/promotion_slide_pager_on.png");
+}
+
+.notice .project .swiper-prev,
+.notice .project .swiper-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  cursor: pointer;
+  outline: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.notice .project .swiper-prev {
+  left: 50%;
+  margin-left: -480px;
+}
+
+.notice .project .swiper-next {
+  right: 50%;
+  margin-right: -480px;
 }
 /*# sourceMappingURL=main.css.map */
