--- a/HTML/re/main.scss
+++ b/HTML/re/main.scss
@@ -23,6 +23,21 @@ a {
   width: 1920px;
   margin: 0 auto;
   position: relative;
+  
+}
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
 }
 
 /* header */
@@ -34,6 +49,8 @@ header {
   background-color: $my_background;
   >.inner {
     height: 140px;
+    left: 50%;
+    margin-left: calc(1920px / -2);
   }
   .logo {
     height: 75px;
@@ -152,6 +169,7 @@ header {
     margin-left: calc(1920px / -2);
     top: 50%;
     margin-top: calc(1920px * 9 / 16 / -2);
+    
     &::before {
       content: "";
       display: block;
@@ -175,13 +193,18 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    left: 50%;
+    margin-left: calc(1920px / -2);
   }
   .floating {
-    position: absolute;
-    font-size: 50px;
+    font-size: 4em;
     font-weight: 500;
     color: $my_font_color;
     text-align: center;
+    span {
+      word-break: keep-all;
+
+    }
   }
 }
 #player {
@@ -191,3 +214,126 @@ header {
   top: 0;
   left: 0;
 }
+.notice {
+  .notice-line {
+    position: relative;
+    .bg-left {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      background-color: $color_333;
+    }
+    .bg-right {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 50%;
+      height: 100%;
+      background-color: #f6f5ef;
+    }
+    .inner {
+      height: 62px;  
+      display: flex;
+    }
+    .inner__left {
+      width: 60%;
+      height: 100%;
+      background-color: #333;
+      display: flex;
+      align-items: center;
+    }
+  }
+  .project {
+    height: 693px;
+    position: relative;
+    transition: height .4s;
+    overflow: hidden;
+    margin-top: 100px;
+    .title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $my_font_color;
+      font-size: 50px;
+    }
+    .swiper-container {
+      width: calc(819px * 3 + 20px);
+      height: 553px; 
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      margin-left: calc((819px * 3 + 20px) / -2);
+      margin-top: 50px;
+    /* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
+    }
+    .swiper-slide {
+      opacity: .5;
+      transition: opacity 1s;
+      overflow: hidden;
+      img {
+        max-width: auto;
+        border-radius: 10px;
+        height: 553px; 
+      }
+      .btn {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto ;
+      }
+    }
+    .swiper-slide-active {
+      opacity : 1;
+    }
+    .swiper-pagination {
+      bottom : 40px;
+      left: 0;
+      right: 0;
+      /* 여기 부분만 지정을 해주면 된다. 이 이외에는 기본적으로 구성되어있음*/
+      .swiper-pagination-bullet {
+        background-color: transparent;
+        background-image: url("./images/promotion_slide_pager.png");
+        width: 12px;
+        height: 12px;
+        margin-right: 6px;
+        outline: none;
+
+        &:last-child{
+          margin-right: 0;
+        }
+      }
+      .swiper-pagination-bullet-active {
+        background-image: url("./images/promotion_slide_pager_on.png");
+      }
+    }
+    .swiper-prev,
+    .swiper-next {
+      width: 42px;
+      height: 42px;
+      border: 2px solid #333;
+      border-radius: 50%;
+      position: absolute;
+      top: 300px;
+      z-index: 1;
+      cursor: pointer;
+      outline: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: .4s;
+    
+    }
+    .swiper-prev {
+      left: 50%;
+      margin-left: -480px;
+    }
+    .swiper-next {
+      right: 50%;
+      margin-right: -480px;
+    }
+  }
+}
+
