Update starbucks_responsive: SCSS refactoring complete

--- a/HTML/starbucks_responsive/css/main2.css
+++ b/HTML/starbucks_responsive/css/main2.css
@@ -559,16 +559,16 @@ header .badges .badge {
   transition: opacity 1s;
 }
 
-.notice .promotion .swiper-slide-active {
-  opacity: 1;
-}
-
 .notice .promotion .swiper-slide .btn {
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
+}
+
+.notice .promotion .swiper-slide-active {
+  opacity: 1;
 }
 
 .notice .promotion .swiper-pagination {
@@ -619,6 +619,12 @@ header .badges .badge {
   transition: .4s;
 }
 
+.notice .promotion .swiper-prev:hover,
+.notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: #fff;
+}
+
 .notice .promotion .swiper-prev {
   left: 50%;
   margin-left: -480px;
@@ -629,13 +635,7 @@ header .badges .badge {
   margin-right: -480px;
 }
 
-.notice .promotion .swiper-prev:hover,
-.notice .promotion .swiper-next:hover {
-  background-color: #333;
-  color: #fff;
-}
-
-/* REWARDS */
+/* --------------- REWARDS ----------------- */
 .rewards {
   position: relative;
 }
@@ -690,7 +690,15 @@ header .badges .badge {
           flex-grow: 1;
 }
 
-/* YOUTUBE VIDEO */
+/* ----------------- YOUTUBE VIDEO --------- */
+#player {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .youtube {
   position: relative;
   height: 700px;
@@ -708,7 +716,6 @@ header .badges .badge {
   margin-top: calc(1920px * 9 / 16 / -2);
 }
 
-/* 가상요소를 이용해서 content > item 구조를 만들어줌 */
 .youtube .youtube__area::before {
   content: "";
   display: block;
@@ -727,17 +734,8 @@ header .badges .badge {
   height: 100%;
 }
 
-#player {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .youtube .inner {
   height: 700px;
-  /* background-color: royalblue; */
 }
 
 .youtube .floating1 {
@@ -752,7 +750,7 @@ header .badges .badge {
   left: 150px;
 }
 
-/* SEASON PRODUCT */
+/* ------------------SEASON PRODUCT --------- */
 .season-product {
   background-image: url("../images/season_product_bg.jpg");
 }
@@ -871,8 +869,18 @@ header .badges .badge {
           perspective: 600px;
 }
 
-.reserve-store .medal .front,
-.reserve-store .medal .back {
+.reserve-store .medal:hover .front {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.reserve-store .medal:hover .back {
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+
+.reserve-store .front,
+.reserve-store .back {
   width: 334px;
   height: 334px;
   position: absolute;
@@ -882,27 +890,17 @@ header .badges .badge {
   transition: 1s;
 }
 
-.reserve-store .medal .front {
+.reserve-store .front {
   -webkit-transform: rotateY(0deg);
           transform: rotateY(0deg);
 }
 
-.reserve-store .medal:hover .front {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-}
-
-.reserve-store .medal .back {
+.reserve-store .back {
   -webkit-transform: rotateY(-180deg);
           transform: rotateY(-180deg);
 }
 
-.reserve-store .medal:hover .back {
-  -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
-}
-
-.reserve-store .medal .back .btn {
+.reserve-store .back .btn {
   position: absolute;
   top: 240px;
   left: 0;
@@ -962,7 +960,7 @@ header .badges .badge {
   margin-bottom: 20px;
 }
 
-/* AWARDS */
+/*----------------- AWARDS ----------*/
 .awards {
   background-color: #272727;
 }
@@ -1002,6 +1000,12 @@ header .badges .badge {
   /* 수직 가운데 정렬!! height 값이 잘 지정되어 있는지 확인 */
 }
 
+.awards .swiper-prev:hover,
+.awards .swiper-next:hover {
+  background-color: #fff;
+  color: #333;
+}
+
 .awards .swiper-prev {
   left: -100px;
 }
@@ -1010,13 +1014,7 @@ header .badges .badge {
   right: -100px;
 }
 
-.awards .swiper-prev:hover,
-.awards .swiper-next:hover {
-  background-color: #fff;
-  color: #333;
-}
-
-/* FOOTER */
+/* ---------------- FOOTER -------------- */
 footer {
   background: #272727;
   border-top: 1px solid #333;
