--- a/HTML/starbucks_responsive/css/main2.scss
+++ b/HTML/starbucks_responsive/css/main2.scss
@@ -386,216 +386,165 @@ header {
           color: #fff;
         }
       }
+      .notice-line__more {
+        width: 62px;
+        height: 62px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .material-icons {
+          color: #fff;
+          font-size: 30px;
+        }
+      }
+    }
+    .inner__right{
+      width: 40%;
+      height: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      h2 {
+        font-size: 17px;
+        font-weight: 700;
+      }
+      .toggle-promotion {
+        width: 62px;
+        height: 62px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       }
     }
   }
-
+  .promotion {
+    height: 693px;
+    background-color: #f6f5ef;
+    position: relative;
+    transition: height .4s;
+    overflow: hidden;
+    &.hide {
+      height: 0;
+    }
+    .swiper-container {
+      width: calc(819px * 3 + 20px);
+      height: 553px; 
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      margin-left: calc((819px * 3 + 20px) / -2);
+    /* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
+    }
+    .swiper-slide {
+      opacity: .5;
+      transition: opacity 1s;
+      .btn {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto ;
+      }
+    }
+    .swiper-slide-active {
+      opacity : 1;
+    }
+    .swiper-pagination {
+      bottom : 40px;
+      left: 0;
+      right: 0;
+      /* 여기 부분만 지정을 해주면 된다. 이 이외에는 기본적으로 구성되어있음*/
+      .swiper-pagination-bullet {
+        background-color: transparent;
+        background-image: url("../images/promotion_slide_pager.png");
+        width: 12px;
+        height: 12px;
+        margin-right: 6px;
+        outline: none;
+        &:last-child{
+          margin-right: 0;
+        }
+      }
+      .swiper-pagination-bullet-active {
+        background-image: url("../images/promotion_slide_pager_on.png");
+      }
+    }
+    .swiper-prev,
+    .swiper-next {
+      width: 42px;
+      height: 42px;
+      border: 2px solid #333;
+      border-radius: 50%;
+      position: absolute;
+      top: 300px;
+      z-index: 1;
+      cursor: pointer;
+      outline: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: .4s;
+      &:hover {
+        background-color: #333;
+        color: #fff;
+      }
+    }
+    .swiper-prev {
+      left: 50%;
+      margin-left: -480px;
+    }
+    .swiper-next {
+      right: 50%;
+      margin-right: -480px;
+    }
+  }
 }
 
-.notice .notice-line .inner__left .notice-line__more {
-  width: 62px;
-  height: 62px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.notice .notice-line .inner__left .notice-line__more .material-icons {
-  color: #fff;
-  font-size: 30px;
-}
-
-.notice .notice-line .inner__right{
-  width: 40%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.notice .notice-line .inner__right h2 {
-  font-size: 17px;
-  font-weight: 700;
-}
-
-.notice .notice-line .inner__right .toggle-promotion {
- width: 62px;
- height: 62px;
- cursor: pointer;
- display: flex;
- justify-content: center;
- align-items: center;
-}
-
-.notice .notice-line .inner__right .toggle-promotion .material-icons {
-
-}
-
-.notice .promotion {
-  height: 693px;
-  background-color: #f6f5ef;
-  position: relative;
-  transition: height .4s;
-  overflow: hidden;
-}
-.notice .promotion.hide {
-  height: 0;
-}
-
-.notice .promotion .swiper-container {
-  width: calc(819px * 3 + 20px);
-  height: 553px; 
-  position: absolute;
-  top: 40px;
-  left: 50%;
-  margin-left: calc((819px * 3 + 20px) / -2);
-/* 화면이 줄어들때에도 가운데 정렬을 유지하는 방법 */
-}
-
-.notice .promotion .swiper-slide {
-  opacity: .5;
-  transition: opacity 1s;
-}
-
-.notice .promotion .swiper-slide-active {
-  opacity : 1;
-}
-
-.notice .promotion .swiper-slide .btn {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto ;
-}
-.notice .promotion .swiper-pagination {
-  bottom : 40px;
-  left: 0;
-  right: 0;
-  /* 여기 부분만 지정을 해주면 된다. 이 이외에는 기본적으로 구성되어있음*/
-}
-
-.notice .promotion .swiper-pagination .swiper-pagination-bullet {
-  background-color: transparent;
-  background-image: url("../images/promotion_slide_pager.png");
-  width: 12px;
-  height: 12px;
-  margin-right: 6px;
-  outline: none;
-}
-
-.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child{
-  margin-right: 0;
-}
-
-.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
-  background-image: url("../images/promotion_slide_pager_on.png");
-}
-.notice .promotion .swiper-prev,
-.notice .promotion .swiper-next {
-  width: 42px;
-  height: 42px;
-  border: 2px solid #333;
-  border-radius: 50%;
-  position: absolute;
-  top: 300px;
-  z-index: 1;
-  cursor: pointer;
-  outline: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: .4s;
-
-}
-.notice .promotion .swiper-prev {
-  left: 50%;
-  margin-left: -480px;
-}
-.notice .promotion .swiper-next {
-  right: 50%;
-  margin-right: -480px;
-}
-
-.notice .promotion .swiper-prev:hover,
-.notice .promotion .swiper-next:hover {
-  background-color: #333;
-  color: #fff;
-} 
-
-/* REWARDS */
+/* --------------- REWARDS ----------------- */
 .rewards {
   position: relative;
+  .inner {
+    background-image: url("../images/rewards.jpg");
+    height: 241px;
+  }
+  .bg-left {
+    width: 50%;
+    height: 100%;
+    background-color: #272727;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .bg-right {
+    width: 50%;
+    height: 100%;
+    background-color: #d5c798;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .btn-group {
+    position: absolute;
+    bottom: 24px;
+    right: 0;
+    width: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    .btn.sign-up {
+      margin-right: 10px;
+    }
+    .btn.sign-in {
+      width: 110px;
+    }
+    .btn.gift {
+      margin-top: 10px;
+      flex-grow: 1;
+    }
+  }
 }
-.rewards .inner {
-  background-image: url("../images/rewards.jpg");
-  height: 241px;
-}
-.rewards .bg-left {
-  width: 50%;
-  height: 100%;
-  background-color: #272727;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.rewards .bg-right {
-  width: 50%;
-  height: 100%;
-  background-color: #d5c798;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.rewards .btn-group {
-  position: absolute;
-  bottom: 24px;
-  right: 0;
-  width: 250px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.rewards .btn-group .btn.sign-up {
-  margin-right: 10px;
-}
-.rewards .btn-group .btn.sign-in {
-  width: 110px;
-}
-.rewards .btn-group .btn.gift {
-  margin-top: 10px;
-  flex-grow: 1;
-}
-/* YOUTUBE VIDEO */
-.youtube {
-  position: relative;
-  height: 700px;
-  background-color: #333;
-  overflow: hidden;
-}
-.youtube .youtube__area {
-  width: 1920px;
-  /* background-color: orange; */
-  position: absolute;
-  left: 50%;
-  margin-left: calc(1920px / -2);
-  top: 50%;
-  margin-top: calc(1920px * 9 / 16 / -2);
-}
-/* 가상요소를 이용해서 content > item 구조를 만들어줌 */
-.youtube .youtube__area::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 0;  
-  padding-top: 56.25%;
-}
-.youtube .youtube__cover {
-  background-image: url("../images/video_cover_pattern.png");
-  background-color: rgba(0, 0, 0, .3);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+
+/* ----------------- YOUTUBE VIDEO --------- */
 #player {
   width: 100%;
   height: 100%;
@@ -603,74 +552,97 @@ header {
   top: 0;
   left: 0;
 }
-.youtube .inner {
+.youtube {
+  position: relative;
   height: 700px;
-  /* background-color: royalblue; */
-}
-.youtube .floating1 {
-  position: absolute;
-  top:50px;
-  left: 0;
-}
-.youtube .floating2 {
-  position: absolute;
-  top:350px;
-  left: 150px;
+  background-color: #333;
+  overflow: hidden;
+  .youtube__area {
+    width: 1920px;
+    /* background-color: orange; */
+    position: absolute;
+    left: 50%;
+    margin-left: calc(1920px / -2);
+    top: 50%;
+    margin-top: calc(1920px * 9 / 16 / -2);
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 0;  
+      padding-top: 56.25%;
+    }
+  }
+  .youtube__cover {
+    background-image: url("../images/video_cover_pattern.png");
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .inner {
+    height: 700px;
+  }
+  .floating1 {
+    position: absolute;
+    top:50px;
+    left: 0;
+  }
+  .floating2 {
+    position: absolute;
+    top:350px;
+    left: 150px;
+  }
 }
 
-
-/* SEASON PRODUCT */
+/* ------------------SEASON PRODUCT --------- */
 .season-product {
   background-image: url("../images/season_product_bg.jpg");
-}
-.season-product .inner {
-  height: 400px;
-}
-.season-product .floating3 {
-  position: absolute;
-  top: -200px;
-  right: 0;
-}
-.season-product .text-group {
-  position: absolute;
-  top: 110px;
-  right: 100px;
-
-}
-.season-product .text-group .title {
-  margin-bottom: 10px;
-} 
-.season-product .text-group .description {
-  margin-bottom: 15px;
-}
-.season-product .text-group .more {
-
+  .inner {
+    height: 400px;
+  }
+  .floating3 {
+    position: absolute;
+    top: -200px;
+    right: 0;
+  }
+  .text-group {
+    position: absolute;
+    top: 110px;
+    right: 100px;
+    .title {
+      margin-bottom: 10px;
+    } 
+    .description {
+      margin-bottom: 15px;
+    }
+  }
 }
 
 /* RESERVE COFFEE */
-
 .reserve-coffee {
   background-image: url("../images/reserve_bg.jpg");
+  .inner {
+    height: 400px;
+  }
+  .reserve-logo {
+    position: absolute;
+    top: 110px;
+    left: 0;
+  }
+  .text-group {
+    position: absolute;
+    top: 124px;
+    left: 208px;
+  }
+  .product {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
-.reserve-coffee .inner {
-  height: 400px;
-}
-.reserve-coffee .reserve-logo {
-  position: absolute;
-  top: 110px;
-  left: 0;
-}
-.reserve-coffee .text-group {
-  position: absolute;
-  top: 124px;
-  left: 208px;
-}
-.reserve-coffee .product {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
 
 /* PICK YOUR FAVORITE */
 .pick-your-favorite {
@@ -679,24 +651,23 @@ header {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+  .inner {
+    padding: 110px 0;
+  }
+  .text-group {
+    margin-left: 100px;
+    width: 362px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    .title {
+      margin-bottom: 40px;
+    }
+    .description {
+      margin-bottom: 40px;
+    }
+  }
 }
-.pick-your-favorite .inner {
-  padding: 110px 0;
-}
-.pick-your-favorite .text-group {
-  margin-left: 100px;
-  width: 362px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-}
-.pick-your-favorite .text-group .title {
-  margin-bottom: 40px;
-}
-.pick-your-favorite .text-group .description {
-  margin-bottom: 40px;
-}
-
 
 /* RESERVE STORE */
 .reserve-store {
@@ -705,204 +676,199 @@ header {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;  
-}
-.reserve-store .inner {
-  height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.reserve-store .medal {
-  width: 334px;
-  height: 334px;
-  perspective: 600px;
-  
-}
-.reserve-store .medal .front,
-.reserve-store .medal .back {
-  width: 334px;
-  height: 334px;
-  position: absolute;
-  backface-visibility: hidden;
-  transition: 1s;  
-}
-.reserve-store .medal .front {  
-  transform: rotateY(0deg);
-}
-.reserve-store .medal:hover .front {
-  transform: rotateY(180deg);
-}
-.reserve-store .medal .back {
-  transform: rotateY(-180deg);
-}
-.reserve-store .medal:hover .back {
-  transform: rotateY(0deg);
-  
-}
-.reserve-store .medal .back .btn {
-  position: absolute;
-  top: 240px;
-  left: 0;
-  right: 0;
-  margin: auto;
+  .inner {
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .medal {
+    width: 334px;
+    height: 334px;
+    perspective: 600px;
+    &:hover .front {
+      transform: rotateY(180deg);
+    }
+    &:hover .back {
+      transform: rotateY(0deg);
+    }
+  }
+  .front,
+  .back {
+    width: 334px;
+    height: 334px;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: 1s;  
+  }
+  .front {  
+    transform: rotateY(0deg);
+  }
+  .back {
+    transform: rotateY(-180deg);
+    .btn {
+      position: absolute;
+      top: 240px;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+  }
 }
 
 /* FIND STORE */
 .find-store {
   background-image: url("../images/find_store_bg.jpg");
-}
-.find-store .inner {
-  height: 400px;
-}
-.find-store .texture1 {
-  position: absolute;
-  top: 0;
-  left: 400px;
-}
-.find-store .texture2 {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.find-store .picture {
-  border-radius: 50%;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, .5);
-  position: absolute;
-}
-.find-store .picture1 {
-  top: -60px;
-  left: 0;
-}
-.find-store .picture2 {
-  top: 150px;
-  left: 250px;
-}
-.find-store .text-group {
-  position: absolute;
-  top: 120px;
-  left: 550px;
-}
-.find-store .text-group .title {
-  margin-bottom: 20px;
-}
-.find-store .text-group .description {
-  margin-bottom: 20px;
+  .inner {
+    height: 400px;
+  }
+  .texture1 {
+    position: absolute;
+    top: 0;
+    left: 400px;
+  }
+  .texture2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  .picture {
+    border-radius: 50%;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, .5);
+    position: absolute;
+  }
+  .picture1 {
+    top: -60px;
+    left: 0;
+  }
+  .picture2 {
+    top: 150px;
+    left: 250px;
+  }
+  .text-group {
+    position: absolute;
+    top: 120px;
+    left: 550px;
+    .title {
+      margin-bottom: 20px;
+    }
+    .description {
+      margin-bottom: 20px;
+    }
+  }
 }
 
-
-/* AWARDS */
+/*----------------- AWARDS ----------*/
 .awards {
   background-color: #272727;
-}
-.awards .inner {
-  padding: 40px 0;
-}
-.awards .swiper-container {
-  width: 100%;
-  height: 40px;
-}
-.awards .swiper-prev,
-.awards .swiper-next {
-  width: 42px;
-  height: 42px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  outline: none;
-  color:#fff;
-  opacity:.3;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto; /* 수직 가운데 정렬!! height 값이 잘 지정되어 있는지 확인 */
-}
-.awards .swiper-prev {
-  left: -100px;
-}
-.awards .swiper-next {
-  right: -100px;
-}
-.awards .swiper-prev:hover,
-.awards .swiper-next:hover {
-  background-color: #fff;
-  color: #333;
+  .inner {
+    padding: 40px 0;
+  }
+  .swiper-container {
+    width: 100%;
+    height: 40px;
+  }
+  .swiper-prev,
+  .swiper-next {
+    width: 42px;
+    height: 42px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    outline: none;
+    color:#fff;
+    opacity:.3;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto; /* 수직 가운데 정렬!! height 값이 잘 지정되어 있는지 확인 */
+    &:hover {
+      background-color: #fff;
+      color: #333;
+    }
+  }
+  .swiper-prev {
+    left: -100px;
+  }
+  .swiper-next {
+    right: -100px;
+  }
 }
 
-/* FOOTER */
+/* ---------------- FOOTER -------------- */
 footer {
   background: #272727;
   border-top: 1px solid #333;
-}
-footer .inner {
-  padding: 40px 0 60px 0;
-}
-footer .menu {
-  display: flex;
-  justify-content: center;
-
-}
-footer .menu li {
-  position: relative;
-}
-footer .menu li::before {
-  content: "";
-  width: 3px;
-  height: 3px;
-  background-color: #555;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: -1px;
-  margin: auto;
-}
-footer .menu li:last-child::before {
-  display: none;
-}
-footer .menu li a {
-  color: #ccc;
-  font-size: 12px;
-  font-weight: 700;
-  padding: 15px;
-  display: block;
-}
-footer .menu li a.green {
-  color:#669900;
-}
-footer .btn-group {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
-footer .btn-group .btn {
-  font-size: 12px;
-  margin-right: 10px;
-}
-footer .btn-group .btn:last-child {
-  margin-right: 0;
-}
-footer .info {
-  margin-top: 30px;
-  text-align: center;
-}
-footer .info span {
-  margin-right: 20px;
-  color: #999;
-  font-size: 12px;
-}
-footer .info span:last-child {
-  margin-right: 0;
-}
-footer .copyright {
-  color: #999;
-  font-size: 12px;
-  text-align: center;
-  margin-top: 12px;
-}
-footer .logo {
-  margin: 30px auto 0;
+  .inner {
+    padding: 40px 0 60px 0;
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+    li {
+      position: relative;
+      &::before {
+        content: "";
+        width: 3px;
+        height: 3px;
+        background-color: #555;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: -1px;
+        margin: auto;
+      }
+      &:last-child::before {
+        display: none;
+      }
+      a {
+        color: #ccc;
+        font-size: 12px;
+        font-weight: 700;
+        padding: 15px;
+        display: block;
+        &.green {
+          color:#669900;
+        }
+      }
+    }
+  }
+  .btn-group {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    .btn {
+      font-size: 12px;
+      margin-right: 10px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .info {
+    margin-top: 30px;
+    text-align: center;
+    span {
+      margin-right: 20px;
+      color: #999;
+      font-size: 12px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .copyright {
+    color: #999;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 12px;
+  }
+  .logo {
+    margin: 30px auto 0;
+  }
 }
 #to-top {
   width: 42px;
